--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FInalAndroidAppProject">
-        <activity android:name=".AddTaskActivity"></activity>
-        <activity android:name=".TaskActivity" />
+        <activity android:name=".TaskActivity"></activity>
         <activity android:name=".MainActivity2" />
         <activity android:name=".MainActivity">
             android:theme="@
