--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FInalAndroidAppProject">
-        <activity android:name=".SignUpActivity"></activity>
+        <activity android:name=".DisplayTasksActivity"></activity>
+        <activity android:name=".SignUpActivity" />
         <activity android:name=".AddTasksActivity" />
-        <activity android:name=".TaskActivity" />
         <activity android:name=".MainActivity2" />
         <activity android:name=".MainActivity">
             android:theme="@
